# foobar2000-discord-rpc-year-in-review

./: README.md  pyproject.toml
wrapped_py/: __init__.py  album.json
