[tool.poetry]
name = "wrapped-py"
version = "0.1.0"
description = "Year in review generator for Foobar2000's Discord Rich Presence component. Made in Python with Pillow. "
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
